--- a/data/data_settings.json
+++ b/data/data_settings.json
@@ -6,5 +6,6 @@
     "id_knob_base_note": 70,
     "id_knob_key_note": 74,
     "id_knob_mode": 73,
-    "id_knob_play_type": 77
+    "id_knob_play_type": 77,
+    "id_knob_chord_type": 76
 }
