--- a/data/user_settings.json
+++ b/data/user_settings.json
@@ -1,4 +1,4 @@
 {
-    "last_load_config": "C:/Users/hfm/Documents/GitHub/MIDI-BRIDGE-AKAI-LPD8/data/akai_lpd8_mk2.json",
+    "last_load_config": "C:/Users/hfm/Documents/GitHub/MIDI-BRIDGE-AKAI-LPD8/default.cnfmidi",
     "last_connected_midi": "test_virt_midi 1"
 }
