--- a/user_settings.json
+++ b/user_settings.json
@@ -1,4 +1,4 @@
 {
-    "last_load_config": "./data/default.cnfmidi",
+    "last_load_config": "./configurations/default.cnfmidi",
     "last_connected_midi": "LPD8 mk2 2"
 }
