--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /venv-pyside-deploy
 /venvPysideDeploy
 /deployment
+gui/main_window/__pycache__/main_window.cpython-313.pyc
+/main.dist
+/gui/main_window/__pycache__
