--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ gui/main_window/__pycache__/main_window.cpython-313.pyc
 /data/__pycache__
 /logic/core/bridge/__pycache__
 /logic/core/controller/__pycache__
+__pycache__/
